Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/fresh/fresh.css
+++ b/source/widget/fresh/fresh.css
@@ -3,6 +3,20 @@
  * @author duxinli
  * @version 4.0
  */
+.blue-radius-btn {
+  background: #3bafda;
+  color: #fff;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
+  border-radius: 2px;
+}
+.blue-radius-btn:hover,
+.blue-radius-btn:focus {
+  background: #359dc4;
+  color: #fff;
+}
 .fresh-notCourse {
   background: #fcfcfc;
   border: 1px solid #ececec;
@@ -57,12 +71,19 @@
   display: inline;
   overflow: hidden;
 }
+.fresh-list .fresh-avatar a {
+  float: left;
+  width: 60px;
+  height: 60px;
+}
 .fresh-list .fresh-avatar img {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
   border-radius: 50%;
+  width: 100%;
+  height: 100%;
 }
 .fresh-list .fresh-detail {
   display: block;
@@ -216,7 +237,9 @@
   position: relative;
   text-align: center;
   padding: 10px;
-  cursor: url("img/small.cur"), auto !important;
+}
+.fresh-list .fresh-detail .fresh-media-expand.fresh-big-img-answer {
+  cursor: url("img/big.cur"), auto !important;
 }
 .fresh-list .fresh-detail .fresh-media-expand .fresh-big-sign-exam {
   overflow: hidden;
@@ -289,6 +312,7 @@
 }
 .fresh-list .fresh-detail .fresh-media-expand .fresh-media-big-img {
   overflow: hidden;
+  cursor: url("img/small.cur"), auto !important;
 }
 .fresh-list .fresh-detail .fresh-media-expand .fresh-media-big-img img {
   max-width: 100%;
@@ -407,6 +431,7 @@
   box-shadow: none;
   font-size: 12px;
   margin: 0;
+  width: 100%;
 }
 .fresh-list .fresh-detail .fresh-comment-box .fresh-comment-form .fresh-comment-textarea .fresh-comment-status {
   background: #fcfcfc;
@@ -416,7 +441,7 @@
   left: 1px;
   right: 1px;
   top: 11px;
-  bottom: 11px;
+  bottom: 19px;
   text-align: center;
   z-index: 10;
 }
@@ -523,6 +548,11 @@
   width: 40px;
   height: 40px;
   margin: 0 14px 0 0;
+}
+.fresh-list .fresh-detail .fresh-comment-detail-info .fresh-comment-list .fresh-avatar-mini a {
+  float: left;
+  width: 40px;
+  height: 40px;
 }
 .fresh-list .fresh-detail .fresh-comment-detail-info .fresh-comment-list .fresh-uesr {
   display: inline;
@@ -640,6 +670,11 @@
   width: 40px;
   height: 40px;
 }
+.fresh-list.fresh-popular-list .fresh-avatar a {
+  float: left;
+  width: 40px;
+  height: 40px;
+}
 .fresh-list.fresh-popular-list .fresh-detail {
   line-height: 18px;
 }
@@ -700,6 +735,7 @@
   height: 136px;
   resize: none;
   overflow-y: auto;
+  width: 100%;
 }
 .fresh-send-box .fresh-send-preview {
   overflow: hidden;
@@ -711,7 +747,7 @@
   float: left;
   position: relative;
   max-width: 120px;
-  min-width: 60px;
+  min-width: 36px;
 }
 .fresh-send-box .fresh-send-preview .fresh-send-preview-imgvideo .fresh-preview-close {
   background: url('img/comment-close.png') no-repeat;
@@ -722,6 +758,9 @@
   right: -18px;
   top: 0;
   cursor: pointer;
+}
+.fresh-send-box .fresh-send-preview .fresh-send-preview-imgvideo img {
+  width: 100%;
 }
 .fresh-send-box .fresh-send-form {
   overflow: hidden;
@@ -795,6 +834,8 @@
   font-family: "SimSun";
   color: #fff;
   margin: 0;
+  border: none;
+  line-height: normal;
 }
 .fresh-send-box .fresh-send-submit-box .fresh-send-submit-btn:hover {
   text-decoration: none;
@@ -871,6 +912,7 @@
   padding: 8px 26px;
   font-size: 14px;
   font-family: "SimSun";
+  display: inline-block;
   margin: 0;
 }
 .fresh-dialog-verificationCode .fresh-dialog-content .fresh-dialog-medal .fresh-dialog-sure-btn a.fresh-dialog-btn-disabled {
@@ -934,6 +976,7 @@
 .fresh-dialog-emote .fresh-dialog-smilies-medal .fresh-dialog-smilies-box .fresh-dialog-smilies-con ul.fresh-dialog-smilies-list {
   width: 450px;
   margin: 10px 0;
+  padding: 0;
   overflow: hidden;
 }
 .fresh-dialog-emote .fresh-dialog-smilies-medal .fresh-dialog-smilies-box .fresh-dialog-smilies-con ul li {
