--- a/source/widget/homework/homework.less
+++ b/source/widget/homework/homework.less
@@ -43,7 +43,15 @@ html,body {
 .font-family(@fontfamily:"SimSun") {
     font-family:@fontfamily; 
 }
-
+.blue-radius-btn{
+   background: #3bafda;
+   color: #fff;
+   .border-radius(2px);
+   &:hover,&:focus{
+      background: #359dc4;
+      color: #fff;
+   }
+}
 .homework-wrapper{
     width: 1190px;
     margin: 20px auto;
@@ -140,6 +148,7 @@ html,body {
                       margin-left: 10px;
                       .font-family;
                       .font-size(14px);
+                      line-height: normal;
                       cursor: pointer;
                       &:hover{
                           background: #2392ba;
@@ -270,36 +279,40 @@ html,body {
               width: 54px;
               text-align: center;
               height: 100%;
-              ul li{
-                  float: left;
-                  width: 100%;
-                  height: 25px;
-                  line-height: 25px;
-                  margin-top: 20px;
-                  text-align: center;
-                  i{
-                     background: url("img/homeIcon.png") no-repeat;
-                     width: 20px;
-                     height: 20px;
-                     display: inline-block;
-                     cursor: pointer;
-                     &.homework-audio{
-                         background-position: -180px 0;
-                      }
-                      &.homework-audio-disabled{
-                         background-position: -92px 0;
-                      }
-                      &.homework-zoomout-btn{
-                         background-position: -114px 0;
-                      }
-                      &.homework-rightRotate-btn{
-                         background-position: -158px 0;
-                      }
-                      &.homework-leftRotate-btn{
-                         background-position: -136px -24px;
-                      }
-                      &.homework-zoom-btn{
-                         background-position: -136px 0;
+              ul{
+                  margin: 0;
+                  padding: 0;
+                  li{
+                      float: left;
+                      width: 100%;
+                      height: 25px;
+                      line-height: 25px;
+                      margin-top: 20px;
+                      text-align: center;
+                      i{
+                         background: url("img/homeIcon.png") no-repeat;
+                         width: 20px;
+                         height: 20px;
+                         display: inline-block;
+                         cursor: pointer;
+                         &.homework-audio{
+                             background-position: -180px 0;
+                          }
+                          &.homework-audio-disabled{
+                             background-position: -92px 0;
+                          }
+                          &.homework-zoomout-btn{
+                             background-position: -114px 0;
+                          }
+                          &.homework-rightRotate-btn{
+                             background-position: -158px 0;
+                          }
+                          &.homework-leftRotate-btn{
+                             background-position: -136px -24px;
+                          }
+                          &.homework-zoom-btn{
+                             background-position: -136px 0;
+                          }
                       }
                   }
               }
@@ -419,27 +432,31 @@ html,body {
             margin-top: 5px;
             font-size: 12px;
             .font-family;
-            ul li{
-                float: left;
-                margin-right: 50px;
-                line-height: 24px;
-                i{
+            ul{
+                margin: 0;
+                padding: 0;
+                li{
                     float: left;
-                    background:url("img/homeIcon.png") no-repeat; 
-                    width: 17px;
-                    height: 14px;
-                    margin: 5px 5px 0 0;
-                    display: inline-block;
-                    background-position: -183px -51px; 
-                }
-                a{
-                    color: #3bafda;
-                    text-decoration: none;
-                    &:hover{
-                       text-decoration: underline;
+                    margin-right: 50px;
+                    line-height: 24px;
+                    i{
+                        float: left;
+                        background:url("img/homeIcon.png") no-repeat; 
+                        width: 17px;
+                        height: 14px;
+                        margin: 5px 5px 0 0;
+                        display: inline-block;
+                        background-position: -183px -51px; 
+                    }
+                    a{
+                        color: #3bafda;
+                        text-decoration: none;
+                        &:hover{
+                           text-decoration: underline;
+                        }
                     }
                 }
-            }
+          }
         }
     }
 
@@ -461,17 +478,21 @@ html,body {
             .homework-star-area{
                 margin-left: 5px;
                 margin-top: 2px;
-                ul li{
-                    float: left;
-                    width:16px;
-                    height: 16px;
-                    margin: 2px 5px;
-                    background:url("img/homeIcon.png") no-repeat; 
-                    display: inline-block;
-                    background-position: -166px -31px;
-                    cursor: pointer;
-                    &.on{
-                        background-position: -184px -31px;
+                ul{
+                    padding: 0;
+                    margin: 0;
+                    li{
+                        float: left;
+                        width:16px;
+                        height: 16px;
+                        margin: 2px 5px;
+                        background:url("img/homeIcon.png") no-repeat; 
+                        display: inline-block;
+                        background-position: -166px -31px;
+                        cursor: pointer;
+                        &.on{
+                            background-position: -184px -31px;
+                        }
                     }
                 }
                 .homework-star-score-num{
@@ -489,7 +510,8 @@ html,body {
             padding: 5px 1.5%;
             margin-top: 15px;
             box-shadow: none;
-            overflow: hidden;
+            overflow-y: auto;
+            width: 100%;
         }
         .homework-comment{
            float: left;
@@ -508,6 +530,7 @@ html,body {
         }
     }
     .homework-submit-box{
+        float: left;
         width: 100%;
         margin-top:10px;
     }
@@ -521,6 +544,7 @@ html,body {
         padding: 8px 26px;
         margin-left: 10px;
         cursor: pointer;
+        line-height: normal;
         .font-family;
         .font-size(14px);
         &:hover{
