--- a/source/widget/UM.card.learn/card.learn.less
+++ b/source/widget/UM.card.learn/card.learn.less
@@ -53,7 +53,6 @@ span.error{
     color: #e74c3c;         
 }
 .gift-card-record{
-//    width: 1050px;
     margin: 20px auto;
     padding: 10px 20px;
     position: relative; 
@@ -190,8 +189,6 @@ span.error{
                 }
             }
             .prompt-box{
-//                width: 1010px;
-//                height: 135px;
                 margin: 0 auto;
                 clear: both;
                 img.prompt{
@@ -255,9 +252,9 @@ span.error{
         margin: 0 7px 10px 50px;
         padding: 5px 10px;
         border:1px solid #DEDED5;
-        // background-color: #fff;
-        
-        text-align: center; color: #0076B3; cursor: pointer;
+        text-align: center; 
+        color: #0076B3;
+        cursor: pointer;
         span {
             background: url("img/arrow_down.gif") no-repeat right center;
             padding-right: 20px;
@@ -427,7 +424,6 @@ span.error{
 }
  //网银支付
      .payment_bank {
-//                width: 960px;
          overflow: hidden;margin-left:215px;margin-top: 20px;
                 .recharge_sum {
                     overflow: hidden;
