--- a/source/widget/courseInfor/ui-course-infor.less
+++ b/source/widget/courseInfor/ui-course-infor.less
@@ -40,43 +40,46 @@
 	.course-center-list {
 	   width: 590px;overflow: hidden;height: 400px;margin-left: 10px;
 	   h2.coures-name-title {
-	   		line-height: 180%;font-size: 16px;overflow: hidden;padding-left: 10px;
+	   		line-height: 180%;font-size: 16px;overflow: hidden;padding-left: 10px;margin:10px 0;
 	   }
 	   .attend-class-time {
 	   	overflow: hidden;
 	   	  span {
-			 width: 75px;font-size: 12px;line-height: 25px; padding-left: 10px;
+			 width: 75px;line-height: 25px; padding-left: 10px;
 	   	  }
 	   	  ul {
-	   	  	width: 510px; overflow: hidden;margin:0;
+	   	  	width: 510px; overflow: hidden;margin:0;padding:0;
 	   	  	li {
-	   	  		float:left;width: 235px;height:30px; line-height: 30px; font-size: 12px;border:1px solid #dcdcdc;text-align: center;list-style: none;margin-right: 10px;margin-bottom: 10px;padding:1;cursor: pointer;overflow: hidden;
+	   	  		float:left;width: 235px;height:30px; line-height: 30px;border:1px solid #dcdcdc;text-align: center;list-style: none;padding:1;cursor: pointer;overflow: hidden;margin:0 10px 10px 0;
 	   	  		&.current {
 						border:2px solid #1e89e0;padding:0;background: url(img/icon_infor.png) right bottom no-repeat;
 	   	  		}
 	   	  	}
 	   	  }
 	   	  .time-list-tips {
-	   	  	   width: 100%;height: 30px;line-height: 20px; font-size: 12px;background: url(img/icon_tips.png) 1px 1px no-repeat;padding-left: 22px;margin-left: 75px;
+	   	  	   width: 100%;height: 30px;line-height: 20px; background: url(img/icon_tips.png) 1px 1px no-repeat;padding-left: 22px;margin-left: 75px;
+	   	  	   a {
+	   	  	   	color: #1e89e0;
+	   	  	   }
 	   	  }
 	   }
 	   .course-content-text {
 	   	 height: 86px;background: #f9f9f9;padding-top: 5px;margin-bottom: 20px;
 	   	 span {
-			 width: 75px;font-size: 12px;line-height: 25px; padding-left: 10px;
+			 width: 75px;line-height: 25px; padding-left: 10px;
 	   	  }
 	   	  ul.f-left {
-	   			width: 510px; overflow: hidden;margin:0;
+	   			width: 510px; overflow: hidden;margin:0;padding:0;
 	   			li {
-	   				line-height: 26px; list-style: none;font-size: 12px;
+	   				line-height: 26px; 
 	   				a {
-	   					display: inline-block;margin-left: 20px;background: url(img/icon_conre.png) 0 7px no-repeat;padding-left: 10px;
+	   					display: inline-block;background: url(img/icon_conre.png) 0 7px no-repeat;margin-left: 20px;padding-left: 10px;color: #1e89e0;
 	   				}
 	   			}
 	   		}
 	   }
 	   .course-favorable-list {
-	   		height: 36px;font-size: 12px;padding-left: 10px;
+	   		height: 36px;padding-left: 10px;
 	   		span {
 	   			display: inline-block; background: #e74c3c;color: #fff;margin-right: 10px;padding:0 5px;
 	   		}
@@ -86,18 +89,18 @@
 	   		.favrble-money {
 	   			width: 300px;padding-left: 10px;
 	   			span {
-	   				display:inline-block;font-size: 12px;padding-right: 20px;
+	   				display:inline-block;padding-right: 20px;
 	   				em {font-size: 26px;font-style: normal;}
 	   			}
 	   			del {
-	   				display:inline-block;font-size: 12px;
+	   				display:inline-block;
 	   				em {font-size: 16px;font-style: normal;}
 	   			}
 	   		}
 	   		ul.f-right {
 	   			overflow: hidden;
 	   			li {
-	   				float: right;width: 100px; text-align: center;list-style: none;font-size: 12px;
+	   				float: right;width: 100px; text-align: center;list-style: none;
 	   				em {font-style: normal;}
 	   				&.line {border-left: 1px solid #dcdcdc;}
 	   			}
@@ -164,7 +167,7 @@
 						ul.select-list {
 							overflow: hidden;margin:0;padding:0;
 							li {
-								float: left;width: 80px;height: 30px;line-height: 30px;text-align: center;font-size: 12px;background: url(img/course-btn.png) no-repeat;list-style: none;overflow: hidden;margin-right: 10px;margin-bottom: 10px;
+								float: left;width: 80px;height: 30px;line-height: 30px;text-align: center;background: url(img/course-btn.png) no-repeat;list-style: none;overflow: hidden;margin:0 10px 10px 0;
 								a {display:block;color: #333;padding-left: 10px;}
 								&.current {
 									background: url(img/course-btn-current.png) no-repeat;
@@ -309,6 +312,9 @@
 			&.t-left {
 				text-align: left;
 				padding-left: 10px;
+			}
+			a {
+				color: #1e89e0;
 			}
 		}
 	}
