--- a/source/widget/courseStudycenter/courseStudycenter.less
+++ b/source/widget/courseStudycenter/courseStudycenter.less
@@ -84,6 +84,15 @@ body{
 		background-color: #3bafda;
 		border-color: #2392ba;
 	}
+	button.success, .button.success {
+		background-color: #37BC9B;
+		border-color: #2c967c;
+		color: #FFFFFF;
+	}
+	button.success:hover, button.success:focus, .button.success:hover, .button.success:focus {
+		background-color: #2c967c;
+		color: #FFFFFF;
+	}
 	button:hover, button:focus, .button:hover, .button:focus {
 		background-color: #2392ba;
 		color: #fff;
