--- a/source/widget/gold/gold.less
+++ b/source/widget/gold/gold.less
@@ -22,7 +22,8 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .gold-detail-show-name,.gold-detail-show-time{color: #666;}
 .gold-detail-show-add,.gold-detail-show-number{color:#e74c3c;}
 .gold-detail-show-dec{color:#3bafda;}
-.gold-detail-block-change,.gold-store-block-change,.gold-exchange-block-change,.gold-exchange-use-block-change{display: none;}
+.gold-detail-block-change,.gold-store-block-change,.gold-exchange-block-change{display: none;}
+.gold-exchange-use-block-change{width: 924px;margin-left: 5px;display: none;}
 //#dateStartCalendar{width: 191px; height: 182px;}
 
 /* 金币商城 */
