Signed-off-by: zhixiaoyang <913151232@qq.com>

--- a/source/widget/courseStudycenter/courseStudycenter.less
+++ b/source/widget/courseStudycenter/courseStudycenter.less
@@ -101,6 +101,7 @@ body{
 		background: #ccd1d9;
 		border: 1px solid #ccd1d9;
 		color: #fff;
+		cursor: default;
 		&:hover{
 			background: #ccd1d9;
 			border: 1px solid #ccd1d9;
@@ -120,6 +121,7 @@ body{
 		font-size: 14px;
 		padding: 0;
 		line-height: 32px;
+		outline: none;
 	}
 	.button-icon{
 		display: inline-block;
