--- a/source/widget/courseStudycenter/courseStudycenter.css
+++ b/source/widget/courseStudycenter/courseStudycenter.css
@@ -107,6 +107,7 @@ body {
   background: #ccd1d9;
   border: 1px solid #ccd1d9;
   color: #fff;
+  cursor: default;
 }
 .courseList-wrap .course-btn-gray:hover,
 .courseList-wrap .course-btn-gray[disabled]:hover {
@@ -128,6 +129,7 @@ body {
   font-size: 14px;
   padding: 0;
   line-height: 32px;
+  outline: none;
 }
 .courseList-wrap .button-icon {
   display: inline-block;
