--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -147,3 +147,11 @@ em {
         }
     }
 }
+
+.panel {
+    &.panel-default {
+        .panel-heading {
+            border-color: #EFEFEF;
+        }
+    }
+}
