--- a/source/widget/courseStudycenter/courseStudycenter.css
+++ b/source/widget/courseStudycenter/courseStudycenter.css
@@ -82,6 +82,19 @@ body {
   background-color: #3bafda;
   border-color: #2392ba;
 }
+.courseList-wrap button.success,
+.courseList-wrap .button.success {
+  background-color: #37BC9B;
+  border-color: #2c967c;
+  color: #FFFFFF;
+}
+.courseList-wrap button.success:hover,
+.courseList-wrap button.success:focus,
+.courseList-wrap .button.success:hover,
+.courseList-wrap .button.success:focus {
+  background-color: #2c967c;
+  color: #FFFFFF;
+}
 .courseList-wrap button:hover,
 .courseList-wrap button:focus,
 .courseList-wrap .button:hover,
@@ -94,6 +107,7 @@ body {
   background: #ccd1d9;
   border: 1px solid #ccd1d9;
   color: #fff;
+  cursor: default;
 }
 .courseList-wrap .course-btn-gray:hover,
 .courseList-wrap .course-btn-gray[disabled]:hover {
@@ -115,6 +129,7 @@ body {
   font-size: 14px;
   padding: 0;
   line-height: 32px;
+  outline: none;
 }
 .courseList-wrap .button-icon {
   display: inline-block;
