--- a/source/widget/UserHome.gold/gold.less
+++ b/source/widget/UserHome.gold/gold.less
@@ -3,8 +3,8 @@ ul,li{list-style: none;margin: 0;}
 em{font-style: normal;}
 table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 /* 金币明细 */
-.gold-detail-title{margin: 0;overflow: hidden;font-size: 14px;border-bottom: 1px solid #3bafda;}
-.gold-detail-title li{float: left;width: 91px;text-align: center;line-height: 30px;cursor: pointer;}
+.gold-detail-title{padding:0;margin: 0;overflow: hidden;font-size: 14px;border-bottom: 1px solid #3bafda;}
+.gold-detail-title a{float: left;width: 91px;text-decoration: none;text-align: center;line-height: 30px;cursor: pointer;}
 .gold-detail-title-on{background-color: #3bafda;color: #ffffff;border-radius: 5px 5px 0 0;}
 .gold-detail-account{width: 100%;height: 50px;border-radius: 8px;background-color: #fff;margin: 22px 0;line-height: 50px;}
 .gold-detail-account em{font-size: 24px;color: #e74c3c;margin: 0 16px;}
@@ -22,11 +22,12 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .gold-detail-show-name,.gold-detail-show-time{color: #666;}
 .gold-detail-show-add,.gold-detail-show-number{color:#e74c3c;}
 .gold-detail-show-dec{color:#3bafda;}
-.gold-detail-block-change,.gold-store-block-change,.gold-exchange-block-change,.gold-exchange-use-block-change{display: none;}
+.gold-detail-block-change,.gold-store-block-change,.gold-exchange-block-change{display: none;}
+.gold-exchange-use-block-change{width: 924px;margin-left: 5px;display: none;}
 //#dateStartCalendar{width: 191px; height: 182px;}
 
 /* 金币商城 */
-.gold-store-title-container,.gold-exchange-title-container{float: left;border-radius: 5px;margin-right: 22px;margin-top: 22px;width: 122px;height: 660px;background-color: #fff;font-size: 14px;overflow: hidden;}
+.gold-store-title-container,.gold-exchange-title-container{padding:0;float: left;border-radius: 5px;margin-right: 22px;margin-top: 22px;width: 122px;height: 660px;background-color: #fff;font-size: 14px;overflow: hidden;}
 .gold-store-title-container li,.gold-exchange-title-container li{height: 32px;line-height: 32px;margin: 22px 0;padding-left: 20px;cursor: pointer;}
 .gold-store-title-on,.gold-exchange-title-on{background-color: #3bafda;color: #fff;}
 .gold-store-container,.gold-exchange-container{position: relative;}
@@ -65,6 +66,7 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .gold-exchange-use span{display: inline-block;width: 60px;height: 32px;background-color: #3baeda;line-height: 32px;vertical-align: middle;color: #fff;border-radius: 3px;cursor: pointer;}
 .gold-exchange-use-focus{color: #3baeda;}
 .gold-exchange-present-intro-box{margin: 0 22px 48px;font-size: 12px;}
+//a:hover, a:focus{color:#fff;}
 
 /* 兑换遮罩 */
 .red-card-box,.present-box{overflow: hidden;margin: 42px 0;position: relative;}
