学习中心首页更改

--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -45,6 +45,7 @@ body{
 	color: #fff;
 	font-size: 14px;
 	font-style: normal;
+	line-height: 23px;
 }
 .label-delay{
 	background: #3bafda;
@@ -92,6 +93,7 @@ body{
 		background: #ccd1d9;
 		border: 1px solid #ccd1d9;
 		color: #fff;
+		cursor: default;
 		&:hover{
 			background: #ccd1d9;
 			border: 1px solid #ccd1d9;
@@ -111,6 +113,15 @@ body{
 		font-size: 14px;
 		padding: 0;
 		line-height: 32px;
+	}
+	button.success, .button.success {
+		background-color: #37bc9b;
+		border-color: #2c967c;
+		color: #ffffff;
+	}
+	button.success:hover, button.success:focus, .button.success:hover, .button.success:focus {
+		background-color: #2c967c;
+		color: #fff;
 	}
 	.button-icon{
 		display: inline-block;
