--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -61,35 +61,6 @@ body{
 }
 .courseList-wrap{
 	position: relative;
-	ul,li{
-		list-style: none;
-		margin-left: 0;
-	}
-
-	button.alert, .button.alert {
-		background-color: #e74c3c;
-		border-color: #cf2b1a;
-		color: #ffffff;
-	}
-	button.alert:hover, button.alert:focus, .button.alert:hover, .button.alert:focus {
-		background-color: #cf2b1a;
-	}
-	button, .button {
-		display: inline-block;
-		text-decoration: none;
-		transition: background-color 300ms ease-out 0s;
-		border-style: solid;
-		border-width: 0;
-		color: #ffffff;
-		cursor: pointer;
-		-moz-appearance: none;
-		background-color: #3bafda;
-		border-color: #2392ba;
-	}
-	button:hover, button:focus, .button:hover, .button:focus {
-		background-color: #2392ba;
-		color: #fff;
-	}
 	.course-btn-gray,.course-btn-gray[disabled]{
 		background: #ccd1d9;
 		border: 1px solid #ccd1d9;
@@ -104,7 +75,7 @@ body{
 			border: 1px solid #ccd1d9;
 		}
 	}
-	.button.course-btn {
+	.btn{
 		border-radius: 2px;
 		font-family: "SimSun";
 		margin-bottom: 0;
@@ -113,35 +84,12 @@ body{
 		text-align: center;
 		font-size: 14px;
 		padding: 0;
-		line-height: 32px;
-	}
-	button.success, .button.success {
-		background-color: #37bc9b;
-		border-color: #2c967c;
-		color: #ffffff;
-	}
-	button.success:hover, button.success:focus, .button.success:hover, .button.success:focus {
-		background-color: #2c967c;
-		color: #fff;
+		line-height: 30px;
 	}
 	.button-icon{
 		display: inline-block;
 		margin-right: 6px;
 		width: 13px;
-	}
-	.button.course-gray{
-		background-color: #fcfcfc;
-		border: 1px solid #eaeaea;
-		color: #333333;
-		line-height: 30px;
-		&:hover{
-			background-color: #e2e2e2;
-			border: 1px solid #d2d2d2;
-		}
-		&:focus{
-			background-color: #e2e2e2;
-			border: 1px solid #d2d2d2;
-		}
 	}
 }
 .courseList {
@@ -210,7 +158,7 @@ body{
 			}
 		}
 		.amount-show{
-			.course-btn{
+			.btn{
 				margin-right: 10px;
 				position: relative;
 				.newLabel{
