课程列表label行高调整

--- a/source/widget/courses/courses.css
+++ b/source/widget/courses/courses.css
@@ -415,6 +415,7 @@ li {
   right: -25px;
   color: #fff;
   font-size: 14px;
+  line-height: 24px;
 }
 .course-small-list .label-subject {
   background: #ffbc3c;
