--- a/source/widget/courses/courses.less
+++ b/source/widget/courses/courses.less
@@ -440,6 +440,7 @@ ul,li{list-style: none;}
 		right: -25px;
 		color: #fff;
 		font-size: 14px;
+		line-height: 24px;
 	}
 	.label-subject{
 		background: #ffbc3c;
