学习中心首页增加弹层

--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -99,6 +99,7 @@ body{
 		font-size: 14px;
 		padding: 0;
 		line-height: 30px;
+		outline: none;
 	}
 	.button-icon{
 		display: inline-block;
@@ -551,5 +552,23 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 		background: #3bafda;
 		color: #fff;
 		border-radius: 4px 4px 0 0;
+	}
+}
+.listTest-pop{
+	font-family: "SimSun";
+	min-width: 180px;
+	li{
+		font-size: 14px;
+		color: #666;
+		line-height: 22px;
+		span{
+			color: #e74c3c;
+			margin-right: 5px
+		}
+	}
+}
+.amount-show{
+	.popover{
+		background-color: #fcfcfc;
 	}
 }
